@@ -117,7 +117,6 @@
     "visibility_param": "You have not specified any visibility parameters",
     "setvisible_method": "The used implementation does not have the setVisible method",
     "inrange_method": "The used implementation does not have the inRange method",
-    "mapbox_method": "The used implementation can not create Mapbox layers",
     "osm_method": "The used implementation can not create OSM layers",
     "vectorlayer_method": "The used implementation can not create Vector layers",
     "wfslayer_method": "The used implementation can not create WFS layers",
