@@ -69,12 +69,12 @@ class OSM extends Layer {
     this.hasAttributtion = false;
 
     /**
-      * OSM haveOSMorMapboxlayer. La OSM no es de Mapbox.
+      * OSM haveOSMLayer. Existe alguna capa que necesite el attributions.
       */
-    this.haveOSMorMapboxLayer = false;
+    this.haveOSMLayer = false;
 
     /**
-      * OSM visibility. DDefine si la capa es visible o no.
+      * OSM visibility. Define si la capa es visible o no.
       * Verdadero por defecto.
       */
     if (options.visibility === false) {
@@ -258,11 +258,11 @@ class OSM extends Layer {
 
     this.map.getLayers().forEach((layer) => {
       if (layer instanceof FacadeOSM) {
-        this.haveOSMorMapboxLayer = true;
+        this.haveOSMLayer = true;
       }
     });
 
-    if (!this.haveOSMorMapboxLayer) {
+    if (!this.haveOSMLayer) {
       /* Control attributions */
       // this.map.getImpl().getMapImpl().getControls().getArray()
       //   .forEach((data) => {
