@@ -674,8 +674,7 @@ export const encodeMVT = (layer, facadeMap) => {
 
         /*
             if (projection.code !== 'EPSG:3857' && this.facadeMap_.getLayers()
-              .some((layerParam) => (layerParam.type === IDEE.layer.type.OSM
-                || layerParam.type === IDEE.layer.type.Mapbox))) {
+              .some((layerParam) => (layerParam.type === IDEE.layer.type.OSM))) {
               geoJSONFeature = geoJSONFormat.writeFeatureObject(feature.getImpl().getFeature(), {
                 featureProjection: projection.code,
                 dataProjection: 'EPSG:3857',
