@@ -5,3 +5,4 @@
 - Adaptación de las clases proxy tras el cambio de librería commons-httpclient
 - Mejoras sobre el proxy tras la unificación con Mapea
 - Se modifica tms.base por baseLayer en IDEE
+- Se elimina la configuración de Mapbox y su uso.
